--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>College Civic learning</title>
+    <title>College Civic Learning</title>
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io3/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io3/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io3/favicon-16x16.png">
@@ -17,6 +17,8 @@
     and the State Higher Education Executive Officers Association invite you to join in speaking out on the essential role colleges 
     and universities play in providing students with a democracy learning foundation.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
