--- a/advisors.html
+++ b/advisors.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>College Civic learning</title>
+    <title>College Civic Learning</title>
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io3/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io3/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io3/favicon-16x16.png">
