--- a/goals&vision.html
+++ b/goals&vision.html
@@ -30,7 +30,7 @@
 
     <div class="navbar">
         <div id="topbar">
-            <span id="home"><a href="index.html">College Civic Learning</a></span>
+            <span id="home"><a href="https://collegeciviclearning.org/">College Civic Learning</a></span>
             <div id="floatRight">
                 <input type="button" class="button" id="aboutButton" value="ABOUT" onclick="window.location.href='about.html'">&nbsp&nbsp&nbsp&nbsp
                 <input type="button" class="button" id="partnersButton" value="PARTNERS" onclick="window.location.href='ourpartners.html'">&nbsp&nbsp&nbsp&nbsp
@@ -39,10 +39,10 @@
         </div>
         <div id="bottombar">
             <div class="subnav-content">
-                <a id="sharedcommitments" href="sharedcommitments.html">SHARED COMMMITMENTS STATEMENT</a>
-                <a href="leadership.html">LEADERSHIP</a>
-                <a id="goals-vision" href="goals&vision.html">GOALS & VISION</a>
-                <a href="advisors.html">ADVISORS</a>
+                <a id="sharedcommitments" href="sharedcommitments">SHARED COMMMITMENTS STATEMENT</a>
+                <a href="leadership">LEADERSHIP</a>
+                <a id="goals-vision" href="goals&vision">GOALS & VISION</a>
+                <a href="advisors">ADVISORS</a>
             </div>
         </div>  
     </div>
@@ -60,27 +60,27 @@
             <nav class="main-nav" id="main-nav">
                 <ul>
                     <li>
-                        <a href="index.html">HOME</a>
+                        <a href="https://collegeciviclearning.org/">HOME</a>
                     </li>
                     <br>
                     <li>
-                        <a id="about-mobile" href="about.html">ABOUT</a>
+                        <a id="about-mobile" href="about">ABOUT</a>
                     </li>
                    <li id="smallerList">
-                        <a id="sharedcommitments-mobile" href="sharedcommitments.html">SHARED COMMMITMENTS STATEMENT</a>
+                        <a id="sharedcommitments-mobile" href="sharedcommitments">SHARED COMMMITMENTS STATEMENT</a>
                     </li>
                     <li id="smallerList">
-                        <a href="leadership.html">LEADERSHIP</a>
+                        <a href="leadership">LEADERSHIP</a>
                     </li>
                     <li id="smallerList">
-                        <a id="goals-vision-mobile" href="goals&vision.html">GOALS & VISION</a>
+                        <a id="goals-vision-mobile" href="goals&vision">GOALS & VISION</a>
                     </li>
                     <li id="smallerList">
-                        <a href="advisors.html">ADVISORS</a>
+                        <a href="advisors">ADVISORS</a>
                     </li>
                     <br>
                     <li>
-                        <a href="ourpartners.html">PARTNERS</a>
+                        <a href="ourpartners">PARTNERS</a>
                     </li>
                     <br>
                     <li>
