--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <div class="navbar">
         <div id="topbar">
-            <span id="home"><a href="index.html">College Civic Learning</a></span>
+            <span id="home"><a href="https://collegeciviclearning.org/">College Civic Learning</a></span>
             <div id="floatRight">
                 <input type="button" class="button" id="aboutButton" value="ABOUT" onclick="window.location.href='about.html'">&nbsp&nbsp&nbsp&nbsp
                 <input type="button" class="button" id="partnersButton" value="PARTNERS" onclick="window.location.href='ourpartners.html'">&nbsp&nbsp&nbsp&nbsp
@@ -41,10 +41,10 @@
         </div>
         <div id="bottombar">
             <div class="subnav-content">
-                <a href="sharedcommitments.html">SHARED COMMMITMENTS STATEMENT</a>
-                <a href="leadership.html">LEADERSHIP</a>
-                <a href="goals&vision.html">GOALS & VISION</a>
-                <a href="advisors.html">ADVISORS</a>
+                <a href="sharedcommitments">SHARED COMMMITMENTS STATEMENT</a>
+                <a href="leadership">LEADERSHIP</a>
+                <a href="goals&vision">GOALS & VISION</a>
+                <a href="advisors">ADVISORS</a>
             </div>
         </div>  
     </div>
@@ -61,27 +61,27 @@
             <nav class="main-nav" id="main-nav">
                 <ul>
                     <li>
-                        <a id="home-mobile" href="index.html">HOME</a>
+                        <a id="home-mobile" href="https://collegeciviclearning.org/">HOME</a>
                     </li>
                     <br>
                     <li>
-                        <a href="about.html">ABOUT</a>
+                        <a href="about">ABOUT</a>
                     </li>
                     <li id="smallerList">
-                        <a href="sharedcommitments.html">SHARED COMMMITMENTS STATEMENT</a>
+                        <a href="sharedcommitments">SHARED COMMMITMENTS STATEMENT</a>
                     </li>
                     <li id="smallerList">
-                        <a href="leadership.html">LEADERSHIP</a>
+                        <a href="leadership">LEADERSHIP</a>
                     </li>
                     <li id="smallerList">
-                        <a href="goals&vision.html">GOALS & VISION</a>
+                        <a href="goals&vision">GOALS & VISION</a>
                     </li>
                     <li id="smallerList">
-                        <a href="advisors.html">ADVISORS</a>
+                        <a href="advisors">ADVISORS</a>
                     </li>
                     <br>
                     <li>
-                        <a href="ourpartners.html">PARTNERS</a>
+                        <a href="ourpartners">PARTNERS</a>
                     </li>
                     <br>
                     <li>
