--- a/sharedcommitments.html
+++ b/sharedcommitments.html
@@ -32,8 +32,8 @@
         <div id="topbar">
             <span id="home"><a href="https://collegeciviclearning.org/">College Civic Learning</a></span>
             <div id="floatRight">
-                <input type="button" class="button" id="aboutButton" value="ABOUT" onclick="window.location.href='about.html'">&nbsp&nbsp&nbsp&nbsp
-                <input type="button" class="button" id="partnersButton" value="PARTNERS" onclick="window.location.href='ourpartners.html'">&nbsp&nbsp&nbsp&nbsp
+                <input type="button" class="button" id="aboutButton" value="ABOUT" onclick="window.location.href='about'">&nbsp&nbsp&nbsp&nbsp
+                <input type="button" class="button" id="partnersButton" value="PARTNERS" onclick="window.location.href='ourpartners'">&nbsp&nbsp&nbsp&nbsp
                 <input type="button" class="button" id="resourceButton" value="RESOURCES">&nbsp&nbsp&nbsp&nbsp
             </div>
         </div>
