--- a/sharedcommitments.html
+++ b/sharedcommitments.html
@@ -185,9 +185,9 @@
             <div class="link-boxes">
                 <ul class="box">
                     <li class="link_name">Quick Links</li>
-                    <li id="list1"><a href="index.html">HOME</a></li>
-                    <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="ourpartners.html">OUR PARTNERS</a></li>
+                    <li id="list1"><a href="https://collegeciviclearning.org/">HOME</a></li>
+                    <li><a href="about">ABOUT</a></li>
+                    <li><a href="ourpartners">OUR PARTNERS</a></li>
                     <li><a href="">RESOURCES</a></li>
                 </ul>
                 <ul class="box">
