--- a/leadership.html
+++ b/leadership.html
@@ -8,15 +8,31 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>College Civic Learning</title>
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io3/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io3/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io3/favicon-16x16.png">
     <link rel="manifest" href="./favicon_io3/site.webmanifest">    
-    <meta name="description" content="College Promise, Complete College America, the Association of American Colleges and Universities, 
-    and the State Higher Education Executive Officers Association invite you to join in speaking out on the essential role colleges 
-    and universities play in providing students with a democracy learning foundation.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Primary Meta Tags -->
+    <title>College Civic Learning</title>
+    <meta name="title" content="College Civic Learning">
+    <meta name="description" content="CLDE leaders invite you to join in speaking out on the essential role colleges and universities play in providing students with a democracy learning foundation.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="">
+    <meta property="og:title" content="College Civic Learning">
+    <meta property="og:description" content="CLDE leaders invite you to join in speaking out on the essential role colleges and universities play in providing students with a democracy learning foundation.">
+    <!-- <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"> -->
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="">
+    <meta property="twitter:title" content="College Civic Learning">
+    <meta property="twitter:description" content="CLDE leaders invite you to join in speaking out on the essential role colleges and universities play in providing students with a democracy learning foundation.">
+     <!-- <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"> -->
+    
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
