--- a/advisors.html
+++ b/advisors.html
@@ -8,11 +8,15 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <title>College Civic Learning</title>
+    <meta name="description" content="CLDE leaders invite you to join in speaking out on the essential role colleges and universities play in providing students with a democracy learning foundation.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io3/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io3/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io3/favicon-16x16.png">
     <link rel="manifest" href="./favicon_io3/site.webmanifest">    
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Primary Meta Tags -->
     <title>College Civic Learning</title>
