--- a/about.html
+++ b/about.html
@@ -192,6 +192,7 @@
                     <li class="link_name">Quick Links</li>
                     <li id="list1"><a href="https://collegeciviclearning.org/">HOME</a></li>
                     <li><a href="about">ABOUT</a></li>
+                    <li><a href="sharedcommitment">SHARED COMMITMENT STATEMENT</a></li>
                     <li><a href="ourpartners">OUR PARTNERS</a></li>
                     <li><a href="takeaction">TAKE ACTION</a></li>
                 </ul>
