--- a/campusprofiles.html
+++ b/campusprofiles.html
@@ -160,6 +160,10 @@
                 Kingsborough Community College
                 <div id="smallestBreak"></div>
                 <a href="PDFS/Kingsborough Community College.pdf">Reference Document</a>
+                <br><br><div id="smallestBreak"></div>
+                Community Colleges for Democracy (Nine Case Studies)
+                <div id="smallestBreak"></div>
+                <a href="PDFS/Kingsborough Community College.pdf">Reference Document</a>
 
                 <br><br><br><br>
                 <span id= "highlighted-text">CLDE in Four-Year Institutions:</span>
