--- a/goals&priorities.html
+++ b/goals&priorities.html
@@ -143,7 +143,7 @@
         <div id="headerbox4">Our Goals</div>
         <span id="bottomBorder"></span>
         <div id="textBox">
-            <span id= "highlighted-text">The CLDE Initiative seeks to:</span>
+            <span id= "highlighted-text">The CLDE Promotes:</span>
             <br><br>
             <span id= "highlighted-text2" style="font-weight: 500;">Quality & Equality:</span>&nbsp;&nbsp;Build commitment and capacity—across postsecondary 
             education—to make civic learning and democracy engagement an expected part of a quality 
