--- a/leadership.html
+++ b/leadership.html
@@ -141,7 +141,7 @@
 
     <div id="pageContent2">
         <div><span id="title">ABOUT &nbsp</span></div><br>
-       <div id="headerbox6">CLDE Initiative Strategy Group</div>
+       <div id="headerbox6">CLDE Leaders</div>
        <span id="bottomBorder"></span>
        <div id="textBox">
             <span id="highlighted-text"> The following leaders are working together on the next-level CLDE strategy to make civic learning 
