--- a/sharedcommitment.html
+++ b/sharedcommitment.html
@@ -144,7 +144,7 @@
         <!-- <div id="headerbox2">Shared Commitment Statement</div>
         <span id="bottomBorder"></span> -->
         <div id="textBox">
-            <span id= "highlighted-text" style="color: #c63c3c;">Our Shared Commitment: <br>Democracy Learning is a Top Priority for Postsecondary 
+            <span id= "highlighted-text-shared" style="color: #c63c3c;">Our Shared Commitment: <br>Democracy Learning is a Top Priority for Postsecondary 
             Education.</span>
             <br><br>
             <span id= "highlighted-text"> With democracy facing profound challenges at home and abroad, 
