--- a/campusprofiles.html
+++ b/campusprofiles.html
@@ -150,7 +150,7 @@
                 <div id="smallestBreak"></div>    <div id="smallestBreak"></div>
                 The Metro College Student Success Program at San Francisco State University 
                 <br><div id="smallestBreak"></div>
-                <a href="./PDFS/The Metro College Student Success Program at San Francisco State University.pdf">Reference Document</a>
+                <a href="./PDFS/The Metro College Student Success Program at San Francisco State University-9.24.21.pdf">Reference Document</a>
 
                 <br><br><br><br>
                 <span id= "highlighted-text">CLDE in Two-Year Institutions:</span>
@@ -163,7 +163,7 @@
                 <br><br><div id="smallestBreak"></div>
                 Community Colleges for Democracy (Nine Case Studies)
                 <div id="smallestBreak"></div>
-                <a href="PDFS/Kingsborough Community College.pdf">Reference Document</a>
+                <a href="PDFS/Community-Colleges-for-Democracy-Aligning-Civic-and-Community-Engagement-with-Institutional-Priorities.pdf">Reference Document</a>
 
                 <br><br><br><br>
                 <span id= "highlighted-text">CLDE in Four-Year Institutions:</span>
