--- a/goals&priorities.html
+++ b/goals&priorities.html
@@ -143,7 +143,7 @@
         <div id="headerbox4">Our Goals</div>
         <span id="bottomBorder"></span>
         <div id="textBox">
-            <span id= "highlighted-text">The CLDE Promotes:</span>
+            <span id= "highlighted-text">CLDE Promotes:</span>
             <br><br>
             <span id= "highlighted-text2" style="font-weight: 500;">Quality & Equality:</span>&nbsp;&nbsp;Build commitment and capacity—across postsecondary 
             education—to make civic learning and democracy engagement an expected part of a quality 
@@ -221,17 +221,14 @@
                 </div>
              
                 <span id="number">6.</span><br>
-                <div id="indent"><span id="indentTitle">Alignment and Collaboration with K-12 Civics and 
-                History Reforms:</span>       
+                <div id="indent"><span id="indentTitle">Faculty, Teacher, Staff, and Leadership Development:</span>       
                 <br>
-                <span id="indentText">Provide direct professional development for teachers and faculty 
-                members on the “how” of civic and democracy learning from school through postsecondary 
-                education. through the annual Civic Learning and Democratic Engagement conference along 
-                with workshops, institutes, and toolkits from organizations committed to students’ civic 
-                learning. Showcase multiple models and resources relevant to different educational contexts: 
-                school, postsecondary, general education, and majors, including career-related fields. 
-                Foster leadership coalitions for democracy learning within states, regions, 
-                and across different sectors in higher education.</span>    
+                <span id="indentText">Provide direct professional development on the “how” of civic and democracy 
+                    learning in postsecondary education through workshops, institutes, and toolkits developed by CLDE 
+                    partner organizations committed to students’ civic learning. Showcase multiple models and resources 
+                    relevant to different educational contexts and to both general education and college majors, including 
+                    career-related fields. Foster leadership coalitions for democracy learning within states, regions, and 
+                    across different sectors in higher education.</span>    
                 </div>
 
                 <span id="number">7.</span><br>
