--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="navbar">
         <div id="topbar">
             <span id="home"><a href="https://collegeciviclearning.org/">College Civic Learning
-                <br> <div id="descriptionHeader">
+                <br> <div id="descriptionHeader";>
                     A Hub for the Civic Learning and Democracy Engagement Movement
                 </div>
             </a></span>
