--- a/ourpartners.html
+++ b/ourpartners.html
@@ -221,6 +221,8 @@
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">State Council for Virginia Higher Education (SCHEV)</span> <br>Peter Blake, Director
         <br><div id="smallBreak"></div>
+        <span id="highlighted-text">The Howard R. Swearer Center for Public Service, Brown University</span> <br>Mary Jo Callan, Stark Family Executive Director
+        <br><div id="smallBreak"></div>
         <span id="highlighted-text">The Bonner Foundation</span> <br>Bobby Hackett, President
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">The Education Trust</span> <br>Denise Forte, Interim CEO
