--- a/takeaction.html
+++ b/takeaction.html
@@ -149,8 +149,8 @@
             The CLDE campus profiles you’ll find here either already reach all students, or have been specially 
             designed to help students from underserved communities succeed at higher levels.
             <br><br>
-            We also feature “macro” initiatives—led both by accreditors and state systems—that are working toward 
-            CLDE “at scale,” meaning that all students will participate, benefit, and contribute.
+            We also feature "macro" initiatives, led by national organizations, accreditors, and state systems - that 
+            are working toward CLDE "at scale", meaning that all students will participate, benefit, and contribute.
             <br><br>
             If you are currently involved in a CLDE initiative that reaches or seeks to reach all
             students, or that has documented benefits for students from underserved communities, 
