--- a/goals&priorities.html
+++ b/goals&priorities.html
@@ -145,7 +145,7 @@
         <div id="textBox">
             <span id= "highlighted-text">CLDE Promotes:</span>
             <br><br>
-            <span id= "highlighted-text2" style="font-weight: 500;">Quality & Equality:</span>&nbsp;&nbsp;Build commitment and capacity—across postsecondary 
+            <span id= "highlighted-text2" style="font-weight: 500;">Quality & Equity:</span>&nbsp;&nbsp;Build commitment and capacity—across postsecondary 
             education—to make civic learning and democracy engagement an expected part of a quality 
             college education for all college students, with equitable participation 
             by students from underserved communities a top priority.
