--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <br><br><br>
             <div id="textBox-main2-header"><a id="link" href="goals&priorities">CLDE Goals:</a></div>
             <span id="bottomBorder2"></span>
-            <div id="borderRadius"><p id="homepageGoalsText">&#8211;&nbsp;QUALITY & EQUALITY</p></div>
+            <div id="borderRadius"><p id="homepageGoalsText">&#8211;&nbsp;QUALITY & EQUITY</p></div>
                 
                     <div id="borderRadius"><p id="homepageGoalsText">&#8211;&nbsp;DEMOCRACY ENGAGEMENT</p></div>
                     
