--- a/sharedcommitment.html
+++ b/sharedcommitment.html
@@ -225,6 +225,9 @@
             documented achievement; and to work toward a common goal of creating a 
             high quality, civic-oriented postsecondary education for all U.S. students.</div>
             </div>
+            <br>
+            <a href="ourpartners">Shared Commitment Signatories and Partners </a> 
+
         </div>
     </div>
 
