--- a/campusprofiles.html
+++ b/campusprofiles.html
@@ -184,7 +184,13 @@
                 <div id="smallestBreak"></div>
                 <a href="PDFS/Providence College and St. Mary's College of California.pdf">Reference Document</a>
                 <br><br><div id="smallestBreak"></div>
-                <a href="https://www.smu.edu/Provost/ProvostOffice/CIP/UndergraduateCurriculum/Common-Curriculum/GR">Southern Methodist University</a>
+                Southern Methodist University
+                <div id="smallestBreak"></div>
+                <a href="https://www.smu.edu/Provost/ProvostOffice/CIP/UndergraduateCurriculum/Common-Curriculum/GR">Reference</a>
+                <br><br><div id="smallestBreak"></div>
+                University of Nebraska-Lincoln
+                <div id="smallestBreak"></div>
+                <a href="./PDFS/University of Nebraska-Lincoln.pdf">Reference</a>
                 <br><br><div id="smallestBreak"></div>
                 University of Wisconsin—Oshkosh
                 <div id="smallestBreak"></div>
@@ -193,6 +199,10 @@
                 Worcester Polytechnic University
                 <div id="smallestBreak"></div>
                 <a href="PDFS/Worcester Polytechnic Institute.pdf">Reference Document</a>
+
+                <br><br><br><br>
+                <span id= "highlighted-text">BTtoP Civic Engagement <a href="https://bttop.org/projects-of-the-bt2p-community/">Snapshots</a></span>
+
                 
         </div>
     </div>
