--- a/ourpartners.html
+++ b/ourpartners.html
@@ -159,6 +159,8 @@
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">Center for Community College Student Engagement</span> <br>Linda Garcia, Executive Director
         <br><div id="smallBreak"></div>
+        <span id="highlighted-text">Center for Education and the Workforce, Georgetown University</span> <br>Anthony Carnevale, Director
+        <br><div id="smallBreak"></div>
         <span id="highlighted-text">Coalition of Urban and Metropolitan Universities</span> <br>Bobbie Laur, Executive Director
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">Community College System of New Hampshire</span> <br>Mark Rubinstein, Chancellor
@@ -173,7 +175,7 @@
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">Excelencia in Education</span> <br>Sarita Brown, President
         <br><div id="smallBreak"></div>
-        <span id="highlighted-text">Georgetown University Center for Education and the Workforce</span> <br>Anthony Carnevale, Director
+        <span id="highlighted-text">Civic Nation</span> <br>Kyle Lierman, CEO
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">Higher Learning Commission</span> <br>Barbara Gellman-Danley, President
         <br><div id="smallBreak"></div>
@@ -183,11 +185,15 @@
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">Institute for Citizens and Scholars</span> <br>Rajiv Vinnakota, President
         <br><div id="smallBreak"></div>
-        <span id="highlighted-text">Institute for Democracy & Higher Education</span> <br>Nancy Thomas, Director
+        <span id="highlighted-text">Institute for Democracy & Higher Education, Tufts University</span> <br>Nancy Thomas, Director
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">Institute for the Study of Knowledge Management</span> <br>Lisa Petrides, Founder and CEO
         <br><div id="smallBreak"></div>
-        <span id="highlighted-text">Interfaith Youth Corp</span> <br>Eboo Patel, Founder and President
+        <span id="highlighted-text">Interfaith Youth Core</span> <br>Eboo Patel, Founder and President
+        <br><div id="smallBreak"></div>
+        <span id="highlighted-text">Jonathan M. Tisch College of Civic Life, Tufts University</span> <br>Dayna Cunningham, Pierre and Pamala Omidyar Dean
+        <br><div id="smallBreak"></div>
+        <span id="highlighted-text">Karsh Institute of Democracy, University of Virginia</span> <br>Melody C. Barnes, Executive Director
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">League for Innovation in the Community College</span> <br>Rufus Glasper, President and CEO
         <br><div id="smallBreak"></div>
@@ -209,7 +215,7 @@
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">New England Commission on Higher Education (NECHE)</span> <br>Lawrence Schall, President
         <br><div id="smallBreak"></div>
-        <span id="highlighted-text">Project Pericles, Jan R. Liss</span> <br>Executive Director
+        <span id="highlighted-text">Project Pericles</span> <br>Jan R. Liss, Executive Director
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">Prosperity Now</span> <br>Gary Cunningham, President and CEO
         <br><div id="smallBreak"></div>
@@ -219,7 +225,7 @@
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">Southern Association of Colleges and Schools Commission on Colleges (SACSCOC)</span> <br>Belle S. Wheelan, President
         <br><div id="smallBreak"></div>
-        <span id="highlighted-text">State Council for Virginia Higher Education (SCHEV)</span> <br>Peter Blake, Director
+        <span id="highlighted-text">State Council of Higher Education for Virginia (SCHEV)</span> <br>Peter Blake, Director
         <br><div id="smallBreak"></div>
         <span id="highlighted-text">The Howard R. Swearer Center for Public Service, Brown University</span> <br>Mary Jo Callan, Stark Family Executive Director
         <br><div id="smallBreak"></div>
