--- a/takeaction.html
+++ b/takeaction.html
@@ -149,12 +149,12 @@
             The CLDE campus profiles you’ll find here either already reach all students, or have been specially 
             designed to help students from underserved communities succeed at higher levels.
             <br><br>
-            We also feature "macro" initiatives, led by national organizations, accreditors, and state systems - that 
+            We also feature "macro" initiatives &#8211; led by national organizations, accreditors, and state systems - that 
             are working toward CLDE "at scale", meaning that all students will participate, benefit, and contribute.
             <br><br>
             If you are currently involved in a CLDE initiative that reaches or seeks to reach all
             students, or that has documented benefits for students from underserved communities, 
-            please send us a description of your work and its approach to equity and inclusion. We will add campus 
+            please <a href="contactus">send us a description of your work</a> and its approach to equity and inclusion. We will add campus 
             profiles to this site as our movement grows.
             <br><br>
             If you are just getting started, or want to expand your existing civic learning program, we hope you 
