--- a/campusprofiles.html
+++ b/campusprofiles.html
@@ -194,7 +194,7 @@
                 <br><br><div id="smallestBreak"></div>
                 University of Wisconsin—Oshkosh
                 <div id="smallestBreak"></div>
-                <a href="PDFS/University of Nebraska-Lincoln.pdf">Reference Document</a>
+                <a href="PDFS/University of Wisconsin--Oshkosh.pdf.pdf">Reference Document</a>
                 <br><br><div id="smallestBreak"></div>
                 Worcester Polytechnic University
                 <div id="smallestBreak"></div>
